<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".LoginActivity">
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:paddingLeft="24dp"
			android:paddingTop="56dp"
			android:paddingRight="24dp">
			
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="106dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="24dp"
				android:contentDescription="@string/app_name"
				android:src="@drawable/logo"
				android:visibility="visible" />
			
			<!-- Email Label -->
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp">
				
				<EditText
					android:id="@+id/new_user"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="Enter Username"
					android:inputType="textCapWords"

					/>
			</android.support.design.widget.TextInputLayout>
			
			<!-- Password Label -->
			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp">
				
				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="Enter Password"
					android:inputType="textPassword"
					/>
			</android.support.design.widget.TextInputLayout>
			
			<!--login btn -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="20sp"
				android:text="@string/login_as" />
			
			<RadioGroup
				android:id="@+id/radio_group"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				>
				
				<RadioButton
					android:id="@+id/radio_patient"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:checked="true"
					android:text="@string/patient" />
				
				<RadioButton
					android:id="@+id/radio_doctor"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/doctor" />
			
			</RadioGroup>
			
			<Button
				android:id="@+id/btn_login"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:layout_marginBottom="24dp"
				android:padding="12dp"
				android:text="@string/login" />
			
			<TextView
				android:id="@+id/link_signup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dp"
				android:gravity="center"
				android:text="@string/no_account_yet_create_one"
				android:textSize="16sp" />
		
		</LinearLayout>
	</ScrollView>
</LinearLayout>